Hamburger menu z-index changed to fixed

--- a/src/assets/scss/components/_hamburger-menu.scss
+++ b/src/assets/scss/components/_hamburger-menu.scss
@@ -1,5 +1,5 @@
 .hamburger-wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   z-index: z('hamburger-menu');
